--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - .env
     volumes:
       - ./wordpress:/var/www/html
+      - ./php-config/custom.ini:/usr/local/etc/php/conf.d/custom.ini
     secrets:
       - db_password
 
