--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,9 @@ WORDPRESS_DB_NAME=enter_db_name
 WORDPRESS_DB_USER=enter_db_user
 
 # Should be false in production environment
-# value: true | false
-WORDPRESS_DEBUG=false
+# Set WORDPRESS_DEBUG to an empty value or simply omit it to ensure WP_DEBUG is false
+WORDPRESS_DEBUG=
+
+# Use WORDPRESS_CONFIG_EXTRA for other specific constants
+WORDPRESS_CONFIG_EXTRA="define('WP_DEBUG_LOG', false); define('WP_DEBUG_DISPLAY', false); define('SCRIPT_DEBUG', false);"
+
