add custom port support

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# Port where the wordpress website should run
+WORDPRESS_PORT=enter_wordpress_port
+
+# Database configurations
 WORDPRESS_DB_NAME=enter_db_name
 WORDPRESS_DB_USER=enter_db_user
 
@@ -7,4 +11,3 @@ WORDPRESS_DEBUG=
 
 # Use WORDPRESS_CONFIG_EXTRA for other specific constants
 WORDPRESS_CONFIG_EXTRA="define('WP_DEBUG_LOG', false); define('WP_DEBUG_DISPLAY', false); define('SCRIPT_DEBUG', false);"
-
