--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.1'
-
 services:
 
   wordpress:
@@ -8,7 +6,7 @@ services:
     image: wordpress
     restart: always
     ports:
-      - 10000:80
+      - ${WORDPRESS_PORT}:80
     environment:
       WORDPRESS_DB_HOST: db
       WORDPRESS_DB_NAME: $WORDPRESS_DB_NAME
