add custom image tag

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# Enter the image tag of wordpress you want to use
+## ex. 6.8.2-php8.4-apache (apache version) or 6.8.2-php8.4-fpm
+WORDPRESS_IMAGE_TAG=enter_wordpress_image_tag
+
 # Port where the wordpress website should run
 WORDPRESS_PORT=enter_wordpress_port
 
