--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,6 @@ WORDPRESS_DB_USER=enter_db_user
 WORDPRESS_DEBUG=
 
 # Use WORDPRESS_CONFIG_EXTRA for other specific constants
+# Example for setting site URL:
+# WORDPRESS_CONFIG_EXTRA="define('WP_HOME', 'https://example.com/blog'); define('WP_SITEURL', 'https://example.com/blog');"
 WORDPRESS_CONFIG_EXTRA="define('WP_DEBUG_LOG', false); define('WP_DEBUG_DISPLAY', false); define('SCRIPT_DEBUG', false);"
